# cookiecutter-python

./: README.md  cookiecutter.json
{{ cookiecutter.app_name }}/: .env.test  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
{{ cookiecutter.app_name }}/.github/workflows/: main.yaml
{{ cookiecutter.app_name }}/charts/{{ cookiecutter.app_name }}/: Chart.yaml  values.yaml
{{ cookiecutter.app_name }}/charts/{{ cookiecutter.app_name }}/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
{{ cookiecutter.app_name }}/k8s-manifests/: README.md
{{ cookiecutter.app_name }}/k8s-manifests/apps/impl/{{ cookiecutter.k8s_namespace }}/{{ cookiecutter.app_name }}/: deployment.yaml  kustomization.yaml  service.yaml  vaultsecret.yaml
{{ cookiecutter.app_name }}/k8s-manifests/apps/sandbox/{{ cookiecutter.k8s_namespace }}/{{ cookiecutter.app_name }}/: dep-patch.yaml  ingress.yaml  kustomization.yaml  vault-patch.yaml
{{ cookiecutter.app_name }}/k8s-manifests/infra/impl/flux-system/{{ cookiecutter.app_name }}/: kustomization.yaml  repository.yaml
{{ cookiecutter.app_name }}/k8s-manifests/infra/sandbox/flux-system/{{ cookiecutter.app_name }}/: kustomization.yaml  policy.yaml
{{ cookiecutter.app_name }}/tests/: conftest.py  test_{{ cookiecutter.app_name }}.py  test_{{ cookiecutter.module_name }}.py
{{ cookiecutter.app_name }}/{{ cookiecutter.app_name }}/: __init__.py  config.py  logging.py  main.py
{{ cookiecutter.app_name }}/{{ cookiecutter.module_name }}/: __init__.py  logging.py  main.py  metrics.py
(+2 files in other folders)
